--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   {{title}}
 </h1> -->
 
-<app-product-page></app-product-page>
+<!-- <app-product-page></app-product-page> -->
+<app-product-list></app-product-list>
