--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
 </h1> -->
 
 <!-- <app-product-page></app-product-page> -->
-<app-product-list></app-product-list>
+<!-- <app-product-list></app-product-list> -->
+
+<router-outlet></router-outlet>
